deploy/gitops/ingress/gitops/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: humancat
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /health_check
    alb.ingress.kubernetes.io/load-balancer-attributes: idle_timeout.timeout_seconds=600
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/success-codes: '301'
    alb.ingress.kubernetes.io/subnets: subnet-03c30f78e0950e03b, subnet-0993d85d90bfe46e0, subnet-09a40de4d016da88c
